fixing theme switcher appearance on mobile devices

--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -50,7 +50,7 @@
   top: 0;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 940px) {
   .collapse {
     display: none;
   }
