--- a/src/components/UI/SearchInput.css
+++ b/src/components/UI/SearchInput.css
@@ -18,7 +18,7 @@
   }
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1255px) {
   .searchInput {
     width: 65rem;
   }
