--- a/src/components/UI/Toggle.css
+++ b/src/components/UI/Toggle.css
@@ -8,7 +8,7 @@
   border-radius: 1rem;
   padding: 0.2rem;
   width: 4rem;
-  height: 1.8rem;
+  height: 1.6rem;
   cursor: pointer;
   position: relative;
   box-shadow: 0px 2px 4px inset rgba(0, 0, 0, 0.2);
@@ -22,8 +22,8 @@
 }
 
 .toggle-switch {
-  width: 1.8rem;
-  height: 1.4rem;
+  width: 1.6rem;
+  height: 1.2rem;
   border-radius: 50%;
   position: absolute;
   left: 0.2rem;
